Add typescript, cleanup

--- a/src/Assets/style.scss
+++ b/src/Assets/style.scss
@@ -19,3 +19,11 @@ header {
   padding: 25px 50px;
   min-height: 15vh;
 }
+
+.main {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 150px 0;
+}
